# Sarma

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  README_CN.md  bunfig.toml  code.md  codemap.md  package.json  project.md  pyproject.toml  pytest.ini  roadmap.md  tsconfig.json
.github/workflows/: publish-pypi.yml  release-native.yml
cli/: .gitignore  main.py  pyproject.toml
cli/sarma_cli/: __main__.py  app.py  commands.py  config.py  graph_view.py  renderer.py  session.py  status.py  store.py
docs/: development.md
ide/: pyproject.toml
ide/build_helpers/: build_nuitka.py
ide/resources/: requirements.txt  update_plugins.py
ide/shared/: database.py  dto.py  enums.py  migrations.py  paths.py
ide/supervisor/: api.py  installer.py  manager.py  models.py
ide/tests/: test_agent_execution.py  test_installer.py
scripts/: build_native_linux.sh  build_native_macos.sh  build_native_release.py  build_native_windows.ps1  build_nuitka.ps1  build_nuitka.py  build_nuitka.sh  install.ps1  install.sh  install_windows_packaging_tools.ps1  package_native.py
skills/vuln-audit-workflow/: SKILL.md
src/: config.ts  debug.ts  index.ts  main.py  paths.ts  session.ts  store.ts
src/cli/: app.ts  ragCommand.ts  renderer.ts
src/context/: compaction.ts  tokenizer.ts
src/engine/: agentFactory.ts  agentRunner.ts  dto.ts  enums.ts  errors.ts  mcpPool.ts  modelFactory.ts  models.ts  prompts.ts  streaming.ts
src/resources/: networkTools.ts  rag.ts  skills.ts  skillshub.ts  terminalTools.ts  webTools.ts
tests/: agentRunner.phase6.test.ts  cli.phase6.test.ts  compaction.phase6.test.ts  config.phase5.test.ts  engine.phase2.test.ts  engine.phase3.test.ts  engine.streaming-integration.test.ts  models.test.ts  rag.phase7.test.ts  resolver.phase5.test.ts  resources.phase5.test.ts  runtime.phase4.test.ts  scaffold.test.ts  session.phase6.test.ts  test_build_nuitka.py  test_runtime_boundaries.py  tui.app.test.tsx  tui.controller.test.ts  tui.index.test.ts
(+275 files in other folders)
