[project]
name = "sarma-cli"
version = "0.1.0"
description = "Sarma — lightweight TUI vulnerability audit agent (audit workflow only)"
readme = "README.md"
license = "MIT"
authors = [{ name = "Sarma Contributors" }]
requires-python = ">=3.12,<3.15"

dependencies = [
    "langgraph>=1.2.0,<2.0.0",
    "langchain-openai>=1.2.1,<2.0.0",
    "langchain-anthropic>=1.4.3,<2.0.0",
    "langchain-mcp-adapters>=0.2.2,<0.3.0",
    "pydantic>=2.13.4,<3.0.0",
    "rich>=14.0.0,<15.0.0",
    "textual>=6.0.0,<7.0.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "click>=8.1.0,<9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
sarma = "sarma_cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sarma_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
