[project]
name = "sarma-cli"
version = "0.1.0"
description = "Sarma — lightweight TUI vulnerability audit agent (audit workflow only)"
readme = "README.md"
license = "MIT"
authors = [{ name = "Sarma Contributors" }]
requires-python = ">=3.12,<3.15"

dependencies = [
    "langgraph>=1.2.0,<2.0.0",
    "langchain-openai>=1.2.1,<2.0.0",
    "langchain-anthropic>=1.4.3,<2.0.0",
    "langchain-mcp-adapters>=0.2.2,<0.3.0",
    "pydantic>=2.13.4,<3.0.0",
    "rich>=15.0.0,<16.0.0",
    "textual>=8.2.7,<9.0.0",
    "click>=8.1.0,<9.0.0",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0,<2.0.0",
    "langchain-huggingface>=1.2.2,<2.0.0",
    "deepagents>=0.6.8",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
]
build = [
    "nuitka>=4.1.2,<5.0.0",
    "ordered-set>=4.1.0,<5.0.0",
    "zstandard>=0.23.0,<1.0.0",
]

[project.scripts]
sarma = "sarma_cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sarma_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
